# catkin_extras

./: .gitignore  .gitmodules  README.md  command.txt  gitignore  grasp_utils_doc.txt  receptionist_list.txt  slam.launch
src/GUI/: ROSnode.py  file_editor.py  functions.py  gui.py  gui2.py  interfaces.py  main.py  statistics.yaml  tab_content.py
src/act_recog/: CMakeLists.txt  package.xml
src/act_recog-docker/: docker-compose.yml
src/action_pickup_floor/: CMakeLists.txt  package.xml
src/action_planner/: CMakeLists.txt  package.xml
src/action_server/: CMakeLists.txt  package.xml
src/common/: CMakeLists.txt  package.xml  setup.py
src/entrenamiento/: CMakeLists.txt  package.xml
src/erasers-app-v2/: README.md
src/erasers_hmi_ros/: CMakeLists.txt  package.xml  setup.py
src/face_recog/: CMakeLists.txt  package.xml  readme.md
src/hardware/head/: CMakeLists.txt  package.xml
src/hardware/head/src/: gaze_node.cpp  gaze_node2.cpp  head_node.cpp  led_node.cpp  mic_controller.cpp  pc_filter_node.cpp
src/hardware/point_cloud/: CMakeLists.txt  package.xml
src/hardware/point_cloud/src/: example.cpp  passthrough.cpp
src/hmm_act_recog/: CMakeLists.txt  package.xml
src/hmm_navigation/: readme.md
src/hsrb_samples/hsrb_motion_samples/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
src/hsrb_samples/hsrb_motion_samples/scripts/: arm_message.py  gripper_message.py  head_actionlib.py  head_message.py  navigation_message.py  omni_actionlib.py  omni_message.py  omni_message_velocity.py
src/hsrb_samples/hsrb_motion_samples/src/: arm_message.cpp  gripper_message.cpp  head_message.cpp  omni_actionlib.cpp  omni_message.cpp
src/hsrb_samples/hsrb_motion_samples/tests/: arm_action.test  arm_action_python.test  arm_message.test  arm_message_python.test  check_effort.py  check_odom.py  check_pose.py  common.launch  gripper_action.test  gripper_action_grasp.test  gripper_action_grasp_python.test  gripper_action_python.test  gripper_message.test  gripper_message_python.test  head_action.test  head_action_python.test  head_message.test  head_message_python.test  omni_action.test  omni_action_python.test  omni_message.test  omni_message_python.test
src/hsrb_samples/hsrb_mounted_devices_samples/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  setup.py
src/hsrb_samples/hsrb_mounted_devices_samples/src/hsrb_mounted_devices_samples/force_torque_sensor/: __init__.py  speak_object_weight.cpp  speak_object_weight.py
src/hsrb_samples/hsrb_mounted_devices_samples/src/hsrb_mounted_devices_samples/status_led/: change_led_color.cpp  change_led_color.py
src/hsrb_samples/hsrb_mounted_devices_samples/src/hsrb_mounted_devices_samples/suction_mechanism/: __init__.py  suction_controller.cpp  suction_controller.py
src/hsrb_samples/hsrb_mounted_devices_samples/test/force_torque_sensor/: cpp_speak_object_weight_en-test.test  cpp_speak_object_weight_ja-test.test  python_speak_object_weight-test.test  speak_object_weight-test.cpp  test_speak_object_weight.py
src/hsrb_samples/hsrb_mounted_devices_samples/test/status_led/: change_led_color-test.cpp  cpp_change_led_color-test.test  python_change_led_color-test.test  test_change_led_color.py
src/hsrb_samples/hsrb_mounted_devices_samples/test/suction_mechanism/: cpp_suction_controller_failure-test.test  cpp_suction_controller_success-test.test  python_suction_controller-test.test  suction_action_server_stub.py  suction_controller_failure-test.cpp  suction_controller_success-test.cpp  suction_controller_test_fixture.hpp  test_suction_controller.py
src/hsrb_samples/hsrb_samples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/hsrb_samples/hsrb_vision_samples/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  setup.py
src/hsrb_samples/hsrb_vision_samples/config/: tabletop.rviz
src/hsrb_samples/hsrb_vision_samples/include/hsrb_vision_samples/: color_detection.hpp  plane_detection.hpp
src/hsrb_samples/hsrb_vision_samples/src/: color_detection.cpp  color_detection_main.cpp  plane_detection.cpp  plane_detection_main.cpp
src/hsrb_samples/hsrb_vision_samples/src/hsrb_vision_samples/: color_detection.py  execute_tabletop_segmentation.py  execute_tabletop_segmentation_backup.py  execute_tabletop_segmentation_msg_decoded.py  execute_tabletop_segmentation_objects.py  moveit_obstacles_demo_takeshi.py  robot_object_views.py
src/hsrb_samples/hsrb_vision_samples/test/: color_detection-test.cpp  cpp_color_detection-test.test  cpp_plane_detection-test.test  plane_detection-test.cpp  python_color_detection-test.test  test_color_detection.py
src/hsrc/: GPSR.py  guest_1_person_description.txt  image_description_demo.py  new_image_description_demo.py  new_recognize_gesture_posture_gpsr.py  rc24_gpsr.py  rc24_receptionist.py  rc25_hri_task.py  receptionist_describe_person.py  recognize_gesture_posture_gpsr.py
src/human_detector/: CMakeLists.txt
src/images_repos/: CMakeLists.txt  package.xml
src/microphone/: GstreamerServer.sh  Readme.md
src/microphone/bypass_mic/: CMakeLists.txt  README.md
src/microphone/bypass_mic/src/: README.md  client.cpp
src/nav_pumas/: package.xml
src/navigation/: .gitignore
src/object_classification/: CMakeLists.txt  package.xml
src/segmentation/: CMakeLists.txt
src/smaches/: ACT_SRVR_Pickup_floor.py  Carry.py  Carry_pointing_debug.py  Faces_for_Justina.ipynb  GPSR.py  Hand_me_that_2.py  Hand_me_that_3.py  How_to_use_face_recog_deepface_server.ipynb  How_to_use_face_recog_deepface_serverasdasd.ipynb  Navigation_Test.py  Pruebas de graspeo.ipynb  Receptionist.py  Receptionist_CHKpt.py  Receptionist_CHKpt_demosinaloa.py  Receptionist_bckp.py  Receptionist_deepface.py  Receptionist_gr.py  Robot_inpsection.py  SMACH_Follow_me.py  SMACH_Pickup_floor.py  SMACH_hmmgoto_AREA2_find_FLOOR.py  SMACH_restaurant.py  SMACH_takeshi.py  SMACH_takeshi_tf2.py  Segment_and_tfs.ipynb  Stickler.py  Storing Groceries.ipynb  Storing.ipynb  Untitled1.ipynb  dirtyik.ipynb  drinking_detect_test.ipynb  go_to_person_pose.py  goto.py  grasp_utils.py  kmeans_gripper_tests.ipynb  knowledge.ipynb  (+12 more)
(+1044 files in other folders)
