<?xml version="1.0"?>
<package>
  <name>hsrb_motion_samples</name>
  <version>0.4.1</version>
  <description>HSR joint controller samples</description>
  <maintainer email="koji_terada@mail.toyota.co.jp">Koji Terada</maintainer>

  <license>TMC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tmc_control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tmc_control_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <test_depend>hsrb_rviz_simulator</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>sensor_msgs</test_depend>
</package>
