<?xml version="1.0"?>
<package>
  <name>hsrb_mounted_devices_samples</name>
  <version>0.4.1</version>
  <description>Samples using devices mounted on HSRB</description>
  <maintainer email="yuka_hashiguchi@mail.toyota.co.jp">Yuka Hashiguchi</maintainer>

  <license>TMC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tmc_control_msgs</build_depend>
  <build_depend>tmc_manipulation_msgs</build_depend>
  <build_depend>tmc_msgs</build_depend>
  <build_depend>tmc_suction</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tmc_control_msgs</run_depend>
  <run_depend>tmc_manipulation_msgs</run_depend>
  <run_depend>tmc_msgs</run_depend>
  <run_depend>tmc_suction</run_depend>

  <test_depend>python-mock</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
</package>
