<?xml version="1.0"?>
<package>
  <name>hsrb_vision_samples</name>
  <version>0.4.1</version>
  <description>Recognition samples using HSR cameras</description>
  <maintainer email="yuka_hashiguchi@mail.toyota.co.jp">Yuka Hashiguchi</maintainer>

  <license>TMC</license>

　<author>Yuka Hashiguchi</author>
  <url type="website">https://docs.hsr.io/manual/development/image_sample.html</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tmc_tabletop_segmentator</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>python-nose</test_depend>
</package>
